refactor: refactor repository test #69